{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 233,
  "lineage": "9f2f700c-8b3c-879a-3716-b3fce5fd62a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "LamoMama",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7f1556c36aaf776",
            "arn": "arn:aws:ec2:us-east-1:930811541552:instance/i-0ff5e665bdf641b17",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ff5e665bdf641b17",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b8d3babf386c5ea3",
            "private_dns": "ip-10-0-2-151.ec2.internal",
            "private_ip": "10.0.2.151",
            "public_dns": "ec2-52-204-228-22.compute-1.amazonaws.com",
            "public_ip": "52.204.228.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c0e77246c165f0aa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1831cf8d3355156",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00e6dc8931255abf7",
              "sg-0ddb8e85733658a6e"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_security_group.ssh_rules",
            "aws_security_group.web_rules",
            "aws_subnet.subnet_public_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7f1556c36aaf776",
            "arn": "arn:aws:ec2:us-east-1:930811541552:instance/i-038acec4ac2037d6f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-038acec4ac2037d6f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f010f4dd3376e043",
            "private_dns": "ip-10-0-1-212.ec2.internal",
            "private_ip": "10.0.1.212",
            "public_dns": "ec2-3-219-30-11.compute-1.amazonaws.com",
            "public_ip": "3.219.30.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0407fba12e322bc49",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6717b0707b77a2b",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00e6dc8931255abf7",
              "sg-0ddb8e85733658a6e"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_security_group.ssh_rules",
            "aws_security_group.web_rules",
            "aws_subnet.subnet_public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930811541552:internet-gateway/igw-0bfa7956231500974",
            "id": "igw-0bfa7956231500974",
            "owner_id": "930811541552",
            "vpc_id": "vpc-01b17922c0fdf131a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "yomama-prod-prod-yomama-alb-access-logs",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:930811541552:loadbalancer/app/yomama-prod-prod-yomama/36ae8ddefac528dc",
            "arn_suffix": "app/yomama-prod-prod-yomama/36ae8ddefac528dc",
            "dns_name": "yomama-prod-prod-yomama-1052761639.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:930811541552:loadbalancer/app/yomama-prod-prod-yomama/36ae8ddefac528dc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "yomama-prod-prod-yomama",
            "security_groups": [
              "sg-0b79ffaf31dc6cc84"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a1831cf8d3355156"
              },
              {
                "subnet_id": "subnet-0a6717b0707b77a2b"
              }
            ],
            "subnets": [
              "subnet-0a1831cf8d3355156",
              "subnet-0a6717b0707b77a2b"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "yomama-prod-prod-yomama",
              "Namespace": "yomama",
              "Stage": "prod"
            },
            "vpc_id": "vpc-01b17922c0fdf131a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_subnet.subnet_public_a",
            "aws_subnet.subnet_public_b",
            "aws_vpc.vpc",
            "module.access_logs.module.s3_bucket.aws_s3_bucket.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_forward",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:930811541552:listener/app/yomama-prod-prod-yomama/36ae8ddefac528dc/14ba389193b82bc2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:930811541552:targetgroup/yomama-prod-prod-yomama-default/ac1241a2c755f4d5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:930811541552:listener/app/yomama-prod-prod-yomama/36ae8ddefac528dc/14ba389193b82bc2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:930811541552:loadbalancer/app/yomama-prod-prod-yomama/36ae8ddefac528dc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.default",
            "aws_lb_target_group.default",
            "aws_subnet.subnet_public_a",
            "aws_subnet.subnet_public_b",
            "aws_vpc.vpc",
            "module.access_logs.module.s3_bucket.aws_s3_bucket.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_redirect",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:930811541552:targetgroup/yomama-prod-prod-yomama-default/ac1241a2c755f4d5",
            "arn_suffix": "targetgroup/yomama-prod-prod-yomama-default/ac1241a2c755f4d5",
            "deregistration_delay": 15,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:930811541552:targetgroup/yomama-prod-prod-yomama-default/ac1241a2c755f4d5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "yomama-prod-prod-yomama-default",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Attributes": "default",
              "Environment": "prod",
              "Name": "yomama-prod-prod-yomama-default",
              "Namespace": "yomama",
              "Stage": "prod"
            },
            "target_type": "ip",
            "vpc_id": "vpc-01b17922c0fdf131a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06c235c098411bdca",
            "owner_id": "930811541552",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bfa7956231500974",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-01b17922c0fdf131a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0341c0fb71cc90638",
            "route_table_id": "rtb-06c235c098411bdca",
            "subnet_id": "subnet-0a6717b0707b77a2b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public",
            "aws_subnet.subnet_public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcac9013c58c8ef8",
            "route_table_id": "rtb-06c235c098411bdca",
            "subnet_id": "subnet-0a1831cf8d3355156"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public",
            "aws_subnet.subnet_public_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_rules",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930811541552:security-group/sg-00e6dc8931255abf7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00e6dc8931255abf7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sshsg",
            "name_prefix": null,
            "owner_id": "930811541552",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01b17922c0fdf131a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_rules",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930811541552:security-group/sg-0ddb8e85733658a6e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddb8e85733658a6e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "websg",
            "name_prefix": null,
            "owner_id": "930811541552",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01b17922c0fdf131a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930811541552:subnet/subnet-0a6717b0707b77a2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a6717b0707b77a2b",
            "map_public_ip_on_launch": true,
            "owner_id": "930811541552",
            "vpc_id": "vpc-01b17922c0fdf131a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930811541552:subnet/subnet-0a1831cf8d3355156",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a1831cf8d3355156",
            "map_public_ip_on_launch": true,
            "owner_id": "930811541552",
            "vpc_id": "vpc-01b17922c0fdf131a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:930811541552:vpc/vpc-01b17922c0fdf131a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bc13ebf94a843c92",
            "default_route_table_id": "rtb-0bfd633dcf4ad48d9",
            "default_security_group_id": "sg-0b79ffaf31dc6cc84",
            "dhcp_options_id": "dopt-be22b7c4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01b17922c0fdf131a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bfd633dcf4ad48d9",
            "owner_id": "930811541552",
            "tags": {
              "Environment": "production"
            }
          }
        }
      ]
    }
  ]
}